--- a/Data.SystemInvader/Data.SystemInvader.csproj
+++ b/Data.SystemInvader/Data.SystemInvader.csproj
@@ -35,14 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="EnemiesData.cs" />
-    <Compile Include="LandsData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WavesData.cs" />
   </ItemGroup>
@@ -52,9 +52,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MO.SystemInvader\MO.SystemInvader.csproj">
