--- a/MO.SystemInvader/MO.SystemInvader.csproj
+++ b/MO.SystemInvader/MO.SystemInvader.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random.cs" />
+    <Compile Include="Snow.cs" />
     <Compile Include="Tower.cs" />
     <Compile Include="TowerShop.cs" />
     <Compile Include="Wave.cs" />
